--- a/app/src/main/res/layout/activity_google.xml
+++ b/app/src/main/res/layout/activity_google.xml
@@ -22,7 +22,7 @@
             android:contentDescription="@string/desc_firebase_lockup"
             android:src="@drawable/firebase_lockup_400" />
 
-         <TextView
+        <TextView
             android:id="@+id/title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -74,7 +74,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/sign_out"
-                android:theme="@style/ThemeOverlay.MyDarkButton" />
+                android:theme="@style/ThemeOverlay.MyDarkButton"
+                android:visibility="visible" />
 
             <Button
                 android:id="@+id/disconnect_button"
